# prompt-orchestrator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  WHYANDWHAT.md  pyproject.toml
._agents_not_allowed/: run_steps.py
.github/workflows/: ci.yml
.opencode/command/: agent-file-template.md  speckit.clarify.md  speckit.constitution.md  speckit.final-review.md  speckit.implement.md  speckit.plan-review.md  speckit.product-review.md  speckit.spec-review.md  speckit.specify.md  speckit.tasks-review.md  speckit.tasks.md  speckit.taskstoissues.md  speckit.test-review.md
.orchestrator/command/: orchestrator.plan-review.md  orchestrator.plan.md  orchestrator.specify.md  orchestrator.tasks-review.md  orchestrator.test-review.md
.orchestrator/memory/: constitution.md
.orchestrator/templates/: plan-review-template.md  plan-template.md  product-review-template.md  spec-review-template.md  spec-template.md
.setup/: HANDOFF.md  JOURNEY.md  TODO.md  WHYANDWHAT.md  run_steps.py  setup.py  steps.yaml  yaml-to-cli.py
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  final-review-template.md  plan-review-template.md  product-review-template.md  spec-review-template.md  tasks-review-template.md  test-review-template.md
.specs/: PythonSnakeGame.md  emailer.md  filequeue-watcher.md  mailhook.md
docs/: HANDOFF.md  JOURNEY.md  WHYANDWHAT.md  WORKSTYLE.md
project/: .env.example
project/tests/: test_cli.py  test_main.py
prompt_orchestrator/: __init__.py  cli.py  runner.py  smolagents_tools.py
prompt_orchestrator/project_skeleton/: pyproject.toml
prompt_orchestrator/scaffold/command/: orchestrator.implement.md  orchestrator.product-review.md  orchestrator.spec-review.md  orchestrator.tasks.md
prompt_orchestrator/scaffold/templates/: tasks-review-template.md
specs/001-smolagents-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-smolagents-backend/checklists/: requirements.md
specs/001-smolagents-backend/contracts/: backend-interface.md
specs/002-spec-context-injection/: plan.md  research.md  spec.md  tasks.md
specs/002-spec-context-injection/checklists/: requirements.md
template/: README.md  requirements.txt  steps.yaml
template/.opencode/command/: speckit.checklist.md  speckit.implement.md
template/.orchestrator/command/: orchestrator.analyze.md  orchestrator.implement.md  orchestrator.plan-review.md  orchestrator.plan.md  orchestrator.product-review.md  orchestrator.spec-review.md  orchestrator.specify.md  orchestrator.tasks-review.md  orchestrator.tasks.md  orchestrator.test-review.md  speckit.analyze.md  speckit.plan.md  speckit.tasks-review.md
template/.orchestrator/memory/: constitution.md
template/.orchestrator/templates/: spec-template.md  tasks-template.md
template/.setup/: run_steps.py
template/project/src/: cli.py  main.py
template/project/tests/: test_cli.py
tests/: __init__.py  test_run_steps.py
