[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-orchestrator"
version = "0.1.0"
description = "Automated speckit workflow executor with review gates"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Dustin Andrews", email = "dustin@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
speckit-run = "run_steps:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["setup*"]
exclude = ["tests*", "docs*", ".*"]
