[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-orchestrator"
version = "0.2.0"
description = "Multi-step LLM workflow executor with review gates"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Dustin Andrews", email = "dustin@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
prompt-orchestrator = "prompt_orchestrator.cli:main"
orchestrator-run = "prompt_orchestrator.runner:main"

[tool.setuptools.packages.find]
include = ["prompt_orchestrator*"]
